--- a/index.html
+++ b/index.html
@@ -2,21 +2,59 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!--responsive meta tag-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brendan Hanna</title>
     <!--materialize css cdn-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <!--my compiled scss-->
     <link rel="stylesheet" href="styles/styles.css">
-    <script type="text/javascript" src="js/jquery-3.2.1.js">
-    </script>
-    <script type="text/javascript" src="js/scripts.js">
-    </script>
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i|Roboto:400,700" rel="stylesheet">
+    <!--jquery scripts-->
+    <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
+    <!--my scripts-->
+    <script type="text/javascript" src="js/scripts.js"></script>
   </head>
   <body>
-    <h1>blah blah</h1>
-    <div class="foo">
-      <h1>blah blah</h1>
-    </div>
+    <header>
+      <img src="images/bar-logo.png" alt="brendan hanna logo" id="top-logo">
+      <p>Front-End Developer, UI & Graphic Designer</p>
+    </header>
+    <section class="project-thumb" id="style360"></section>
+    <section class="project-thumb" id="pokemon"></section>
+    <section class="project-thumb" id="ebird"></section>
+    <section class="project-thumb" id="sandwich"></section>
+    <section id="about">
+      <h3>About</h3>
+      <div class="horizontal-line"></div>
+      <img src="images/about-photo.png" alt="portrait of brendan hanna">
+      <p>I'm a UI designer and front-end dev passionate about combining tech with design, music and social change. Fluent in HTML, CSS and Javascript using tools like Angular, React, Sass/Less, Sketch, Invision, Photoshop & Illustrator.</p>
+      <p>I am also a hip hop artist under the name Gepetto. Check my music out here.</p>
+    </section>
+    <section class="light-bg" id="contact">
+      <h3>Contact</h3>
+      <div class="input-field">
+        <input id="email" type="email" class="validate">
+        <label for="email">Email</label>
+      </div>
+      <div class="input-field">
+        <textarea id="message" class="materialize-textarea"></textarea>
+        <label for="message">Leave a Mess</label>
+      </div>
+      <a class="waves-effect waves-light btn-large button">Holler</a>
+    </section>
+    <footer class="light-bg">
+      <div class="horizontal-line-dark"></div>
+      <a href="" target="_blank">Github</a>
+    </footer>
+
+
+
+
+
+
+
     <!--materialize js cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   </body>
