--- a/index.html
+++ b/index.html
@@ -11,20 +11,58 @@
     <link rel="stylesheet" href="styles/styles.css">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i|Roboto:400,700" rel="stylesheet">
+    <!-- font awesome icons -->
+    <script src="https://use.fontawesome.com/8606092cd1.js"></script>
     <!--jquery scripts-->
     <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
     <!--my scripts-->
     <script type="text/javascript" src="js/scripts.js"></script>
   </head>
   <body>
+    <!-- materialize navbar -->
+    <nav>
+      <div class="nav-wrapper white">
+        <!-- logo -->
+        <a href="#!" class="brand-logo left">
+          <img src="images/small-box-logo.png" alt="BH logo">
+        </a>
+        <!-- hamburger menu -->
+        <a href="#" data-activates="mobile-demo" class="button-collapse right">
+          <i class="fa fa-bars material-icons black-text" aria-hidden="true"></i>
+        </a>
+        <!-- un-collapsed navbar links -->
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#work" class="black-text">Work</a></li>
+          <li><a href="#about" class="black-text">About</a></li>
+          <li><a href="#contact" class="black-text">Contact</a></li>
+        </ul>
+        <!-- side nav -->
+        <ul class="side-nav" id="mobile-demo">
+          <li><a href="#work">Work</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li id="hide-nav"><a href="#">Hide Me</a></li>
+        </ul>
+      </div>
+    </nav>
+
+
+    <!--header-->
     <header>
       <img src="images/bar-logo.png" alt="brendan hanna logo" id="top-logo">
       <p>Front-End Developer, UI & Graphic Designer</p>
     </header>
-    <section class="project-thumb" id="style360"></section>
-    <section class="project-thumb" id="pokemon"></section>
-    <section class="project-thumb" id="ebird"></section>
-    <section class="project-thumb" id="sandwich"></section>
+
+    <!-- work thumbnails -->
+    <section id="work">
+      <section class="project-thumb" id="style360"></section>
+      <section class="project-thumb" id="pokemon"></section>
+      <section class="project-thumb" id="ebird"></section>
+      <section class="project-thumb" id="sandwich"></section>
+
+    </section>
+
+    <!--about section-->
     <section id="about">
       <h3>About</h3>
       <div class="horizontal-line"></div>
@@ -32,6 +70,8 @@
       <p>I'm a UI designer and front-end dev passionate about combining tech with design, music and social change. Fluent in HTML, CSS and Javascript using tools like Angular, React, Sass/Less, Sketch, Invision, Photoshop & Illustrator.</p>
       <p>I am also a hip hop artist under the name Gepetto. Check my music out here.</p>
     </section>
+
+    <!-- contact section -->
     <section class="light-bg" id="contact">
       <h3>Contact</h3>
       <div class="input-field">
@@ -44,12 +84,12 @@
       </div>
       <a class="waves-effect waves-light btn-large button">Holler</a>
     </section>
+
+    <!-- footer-->
     <footer class="light-bg">
       <div class="horizontal-line-dark"></div>
       <a href="" target="_blank">Github</a>
     </footer>
-
-
 
 
 
