--- a/index.html
+++ b/index.html
@@ -54,20 +54,53 @@
       <div class="swapper">
         <!--carousel-->
         <div class="carousel carousel-slider" data-indicators="true">
-          <div class="carousel-fixed-item center">
+          <!-- <div class="carousel-fixed-item center">
             <a class="btn waves-effect white grey-text darken-text-2 view-button">VIEW</a>
+          </div> -->
+          <!-- slide 1 -->
+          <div class="carousel-item" href="#one!" id="style360">
+            <div class="button-wrapper">
+              <div class="overlay"></div>
+              <a id="button-1" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+            </div>
           </div>
-          <a class="carousel-item" href="#one!" id="style360"></a>
-          <a class="carousel-item" href="#two!" id="pokemon">=</a>
-          <a class="carousel-item" href="#three!" id="ebird"></a>
-          <a class="carousel-item" href="#four!" id="sandwich"></a>
+          <div class="carousel-item" href="#two!" id="pokemon">
+            <div class="button-wrapper">
+              <div class="overlay"></div>
+              <a id="button-2" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+            </div>
+          </div>
+          <div class="carousel-item" href="#two!" id="npo">
+            <div class="button-wrapper">
+              <div class="overlay"></div>
+              <a id="button-3" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+            </div>
+          </div>
+          <div class="carousel-item" href="#two!" id="ebird">
+            <div class="button-wrapper">
+              <div class="overlay"></div>
+              <a id="button-4" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+            </div>
+          </div>
         </div>
         <!--end carousel-->
         <!--case study (initially hidden off screen) -->
-        <div class="case-study">
+        <div class="case-studies">
           <i class="fa fa-chevron-left back-chevron"></i>
-          <div class="case-study-content">
-            <h2>Look, it's a Case Study</h2>
+          <div class="case-study" id="case-study-1">
+            <h2>Style 360</h2>
+            <h3 class="back">BACK</h3>
+          </div>
+          <div class="case-study" id="case-study-2">
+            <h2>Pokemon</h2>
+            <h3 class="back">BACK</h3>
+          </div>
+          <div class="case-study" id="case-study-3">
+            <h2>Non Profit Donator</h2>
+            <h3 class="back">BACK</h3>
+          </div>
+          <div class="case-study" id="case-study-4">
+            <h2>Early Bird Project Tee Shirt</h2>
             <h3 class="back">BACK</h3>
           </div>
         </div>
@@ -100,7 +133,7 @@
 
     <!-- contact section -->
     <section class="light-bg" id="contact">
-      <form>        
+      <form>
         <h3>Contact</h3>
         <div class="input-field">
           <input id="email" type="email" class="validate">
