save changed before merging to master.most things work except linking back to the original page from the case study page using the navbar links

--- a/index.html
+++ b/index.html
@@ -59,37 +59,57 @@
           </div> -->
           <!-- slide 1 -->
           <div class="carousel-item" href="#one!" id="style360">
-            <div class="button-wrapper">
-              <div class="overlay"></div>
+            <div class="overlay"></div>
+            <div class="slide-wrapper">
+              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
               <a id="button-1" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
             </div>
           </div>
           <div class="carousel-item" href="#two!" id="pokemon">
-            <div class="button-wrapper">
-              <div class="overlay"></div>
+            <div class="overlay"></div>
+            <div class="slide-wrapper">
+              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
               <a id="button-2" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
             </div>
           </div>
-          <div class="carousel-item" href="#two!" id="npo">
-            <div class="button-wrapper">
-              <div class="overlay"></div>
+          <div class="carousel-item" href="#three!" id="npo">
+            <div class="overlay"></div>
+            <div class="slide-wrapper">
+              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
               <a id="button-3" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
             </div>
           </div>
-          <div class="carousel-item" href="#two!" id="ebird">
-            <div class="button-wrapper">
-              <div class="overlay"></div>
+          <div class="carousel-item" href="#four!" id="ebird">
+            <div class="overlay"></div>
+            <div class="slide-wrapper">
+              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
               <a id="button-4" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
             </div>
           </div>
         </div>
-        <!--end carousel-->
+
         <!--case study (initially hidden off screen) -->
         <div class="case-studies">
-          <i class="fa fa-chevron-left back-chevron"></i>
+          <i class="fa fa-chevron-left fa-2x back-chevron"></i>
+          <!--case study-->
           <div class="case-study" id="case-study-1">
-            <h2>Style 360</h2>
-            <h3 class="back">BACK</h3>
+            <div class="case-study-text">
+              <h2>Style 360</h2>
+              <p>this was a project that bloobity blah purple nurple</p>
+            </div>
+            <div class="case-study-content-wrapper">
+              <div class="case-study-content">
+                <img src="images/style360-1.PNG" alt="screenshot of style360 project" class="style360-screenshot">
+                <img src="images/style360-2.PNG" alt="screenshot of style360 project" class="style360-screenshot">
+                <img src="images/style360-3.PNG" alt="screenshot of style360 project" class="style360-screenshot">
+                <img src="images/style360-4.PNG" alt="screenshot of style360 project" class="style360-screenshot">
+                <img src="images/style360-5.PNG" alt="screenshot of style360 project" class="style360-screenshot">
+              </div>
+            </div>
           </div>
           <div class="case-study" id="case-study-2">
             <h2>Pokemon</h2>
@@ -108,15 +128,6 @@
       </div>
       <!-- end swapper wrapper-->
     </section>
-
-    <!-- old work thumbnail grid
-    <section id="work">
-      <section class="project-thumb" id="style360"></section>
-      <section class="project-thumb" id="pokemon"></section>
-      <section class="project-thumb" id="ebird"></section>
-      <section class="project-thumb" id="sandwich"></section>
-    </section>-->
-
 
     <!--about section-->
     <section id="about">
