--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
           </div>
         </div>
 
-        <!--case study (initially hidden off screen) -->
+        <!--case studies (initially hidden off screen) -->
         <div class="case-studies">
           <i class="fa fa-chevron-left fa-2x back-chevron"></i>
           <!--case study-->
-          <div class="case-study" id="case-study-1">
+          <div class="case-study one">
             <div class="case-study-text">
               <h2>Style 360</h2>
               <p>this was a project that bloobity blah purple nurple</p>
@@ -111,15 +111,15 @@
               </div>
             </div>
           </div>
-          <div class="case-study" id="case-study-2">
+          <div class="case-study two">
             <h2>Pokemon</h2>
             <h3 class="back">BACK</h3>
           </div>
-          <div class="case-study" id="case-study-3">
+          <div class="case-study three">
             <h2>Non Profit Donator</h2>
             <h3 class="back">BACK</h3>
           </div>
-          <div class="case-study" id="case-study-4">
+          <div class="case-study four">
             <h2>Early Bird Project Tee Shirt</h2>
             <h3 class="back">BACK</h3>
           </div>
