successfully made first carousel slide non hover on touch devices

--- a/index.html
+++ b/index.html
@@ -50,83 +50,45 @@
     </header>
 
     <!--holds carousel and case studies-->
-    <section id="work" class="swapper-wrapper">
-      <div class="swapper">
-        <!--carousel-->
-        <div class="carousel carousel-slider" data-indicators="true">
-          <!-- <div class="carousel-fixed-item center">
-            <a class="btn waves-effect white grey-text darken-text-2 view-button">VIEW</a>
-          </div> -->
-          <!-- slide 1 -->
-          <div class="carousel-item" href="#one!" id="style360">
-            <div class="overlay"></div>
-            <div class="slide-wrapper">
-              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <a id="button-1" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
-              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-            </div>
-          </div>
-          <div class="carousel-item" href="#two!" id="pokemon">
-            <div class="overlay"></div>
-            <div class="slide-wrapper">
-              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <a id="button-2" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
-              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-            </div>
-          </div>
-          <div class="carousel-item" href="#three!" id="npo">
-            <div class="overlay"></div>
-            <div class="slide-wrapper">
-              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <a id="button-3" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
-              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-            </div>
-          </div>
-          <div class="carousel-item" href="#four!" id="ebird">
-            <div class="overlay"></div>
-            <div class="slide-wrapper">
-              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <a id="button-4" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
-              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-            </div>
+    <section id="work">
+      <!--carousel-->
+      <div class="carousel carousel-slider" data-indicators="true">
+        <!-- slide 1 -->
+        <div class="carousel-item" href="#one!" id="style360">
+          <div class="overlay"></div>
+          <div onClick="window.location='style-360.html';" class="slide-wrapper">
+            <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+            <a href="style-360.html" id="button-1" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+            <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
           </div>
         </div>
 
-        <!--case study (initially hidden off screen) -->
-        <div class="case-studies">
-          <i class="fa fa-chevron-left fa-2x back-chevron"></i>
-          <!--case study-->
-          <div class="case-study" id="case-study-1">
-            <div class="case-study-text">
-              <h2>Style 360</h2>
-              <p>this was a project that bloobity blah purple nurple</p>
-            </div>
-            <div class="case-study-content-wrapper">
-              <div class="case-study-content">
-                <img src="images/style360-1.PNG" alt="screenshot of style360 project" class="style360-screenshot">
-                <img src="images/style360-2.PNG" alt="screenshot of style360 project" class="style360-screenshot">
-                <img src="images/style360-3.PNG" alt="screenshot of style360 project" class="style360-screenshot">
-                <img src="images/style360-4.PNG" alt="screenshot of style360 project" class="style360-screenshot">
-                <img src="images/style360-5.PNG" alt="screenshot of style360 project" class="style360-screenshot">
-              </div>
-            </div>
-          </div>
-          <div class="case-study" id="case-study-2">
-            <h2>Pokemon</h2>
-            <h3 class="back">BACK</h3>
-          </div>
-          <div class="case-study" id="case-study-3">
-            <h2>Non Profit Donator</h2>
-            <h3 class="back">BACK</h3>
-          </div>
-          <div class="case-study" id="case-study-4">
-            <h2>Early Bird Project Tee Shirt</h2>
-            <h3 class="back">BACK</h3>
+        <div class="carousel-item" href="#two!" id="pokemon">
+          <div class="overlay"></div>
+          <div class="slide-wrapper">
+            <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+            <a href="pokemon.html" id="button-2" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+            <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
           </div>
         </div>
-        <!-- end case study-->
+        <div class="carousel-item" href="#three!" id="npo">
+          <div class="overlay"></div>
+          <div class="slide-wrapper">
+            <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+            <a href="npo.html" id="button-3" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+            <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+          </div>
+        </div>
+        <div class="carousel-item" href="#four!" id="ebird">
+          <div class="overlay"></div>
+          <div class="slide-wrapper">
+            <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+            <a href="ebird.html" id="button-4" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
+            <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+          </div>
+        </div>
       </div>
-      <!-- end swapper wrapper-->
+      <!--/carousel-->
     </section>
 
     <!--about section-->
