try changing anchor to div and vice versa

--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
         <div class="carousel-item" href="#two!" id="pokemon">
           <div class="overlay"></div>
           <div class="slide-wrapper">
-            <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-            <a href="pokemon.html" id="button-2" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
-            <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+            <a href="style360.html">
+              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+              <div onClick="window.location='pokemon.html';"  id="button-2" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</div>
+              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+            </a>
           </div>
         </div>
         <div class="carousel-item" href="#three!" id="npo">
           <div class="overlay"></div>
-          <div class="slide-wrapper">
+          <div onClick="window.location='npo.html';" class="slide-wrapper">
             <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
             <a href="npo.html" id="button-3" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
             <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
@@ -81,7 +83,7 @@
         </div>
         <div class="carousel-item" href="#four!" id="ebird">
           <div class="overlay"></div>
-          <div class="slide-wrapper">
+          <div onClick="window.location='ebird.html';" class="slide-wrapper">
             <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
             <a href="ebird.html" id="button-4" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
             <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
