add mouse scroll icon and text layout to case studies

--- a/ebird.html
+++ b/ebird.html
@@ -43,23 +43,41 @@
     </div>
     <!--case study (initially hidden off screen) -->
     <div class="case-studies">
+      <!-- back -->
       <a href="index.html#work">
-        <i class="fa fa-chevron-left fa-2x back-chevron"></i>
+        <p class="back-chevron">back</i>
       </a>
       <!--case study-->
-      <div class="case-study" id="case-study-2">
-        <div class="case-study-text">
-          <h2>Early Bird Project T Shirts</h2>
-          <p>Suck a seriously long penis!</p>
-        </div>
-        <div class="case-study-content-wrapper">
-          <!--'content' (screenshots) -->
-          <div class="case-study-content">
-
+      <div class="case-study" id="case-study-1">
+        <div class="case-study-left">
+          <div class="case-study-heading">
+            <a href="npo.html">
+              <i class="fa fa-chevron-left fa-2x back-chevron"></i>
+            </a>
+            <h3>Early Bird Tees</h3>
+            <a href="style-360.html">
+              <i class="fa fa-chevron-right fa-2x back-chevron"></i>
+            </a>
           </div>
-          <!--content-->
+          <div class="case-study-text">
+            <p>this was a project that bloobity blah purple nurple</p>
+          </div>
         </div>
-        <!--/contentwrapper-->
+        <div class="case-study-right">
+          <!--content wrapper-->
+          <div class="case-study-content-wrapper">
+            <!--'content' (screenshots) -->
+            <div class="case-study-content">
+
+              <div class="to-top">
+                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+                <p>top</p>
+              </div>
+            </div>
+            <!--content-->
+          </div>
+          <!--content wrapper-->
+        </div>
       </div>
       <!--case study-->
     </div>
