--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- slide 1 -->
         <div class="carousel-item" href="#one!" id="style360">
           <div class="overlay"></div>
-          <div onClick="window.location='style-360.html';" class="slide-wrapper">
+          <div class="slide-wrapper">
             <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
             <a href="style-360.html" id="button-1" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
             <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
@@ -66,11 +66,9 @@
         <div class="carousel-item" href="#two!" id="pokemon">
           <div class="overlay"></div>
           <div class="slide-wrapper">
-            <a href="style360.html">
               <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <div onClick="window.location='pokemon.html';"  id="button-2" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</div>
+              <div onclick="window.location='pokemon.html';"  id="button-2" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</div>
               <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-            </a>
           </div>
         </div>
         <div class="carousel-item" href="#three!" id="npo">
