--- a/pokemon.html
+++ b/pokemon.html
@@ -43,23 +43,42 @@
     </div>
     <!--case study (initially hidden off screen) -->
     <div class="case-studies">
+      <!-- back -->
       <a href="index.html#work">
-        <i class="fa fa-chevron-left fa-2x back-chevron"></i>
+        <p class="back-chevron">back</i>
       </a>
       <!--case study-->
       <div class="case-study" id="case-study-2">
-        <div class="case-study-text">
-          <h2>Pokemon</h2>
-          <p>Pokemon anal sex dungeon go!</p>
-        </div>
-        <div class="case-study-content-wrapper">
-          <!--'content' (screenshots) -->
-          <div class="case-study-content">
-
+        <div class="case-study-left">
+          <div class="case-study-heading">
+            <a href="style-360.html">
+              <i class="fa fa-chevron-left fa-2x back-chevron"></i>
+            </a>
+            <h3>Pokemon 'Emulator'</h3>
+            <a href="npo.html">
+              <i class="fa fa-chevron-right fa-2x back-chevron"></i>
+            </a>
           </div>
-          <!--content-->
+          <div class="case-study-text">
+            <p>Pokemon anal sex dungeon go!</p>
+          </div>
         </div>
-        <!--/contentwrapper-->
+        <div class="case-study-right">
+          <div class="case-study-content-wrapper">
+            <!--'content' (screenshots) -->
+            <div class="case-study-content">
+              <img src="images/pokemon-1.PNG" alt="screenshot of pokemon project" class="screenshot">
+              <img src="images/pokemon-2.PNG" alt="screenshot of pokemon project" class="screenshot">
+              <img src="images/pokemon-3.PNG" alt="screenshot of pokemon project" class="screenshot">
+              <div class="to-top">
+                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+                <p>top</p>
+              </div>
+            </div>
+            <!--content-->
+          </div>
+          <!--/contentwrapper-->
+        </div>
       </div>
       <!--case study-->
     </div>
