--- a/style-360.html
+++ b/style-360.html
@@ -7,10 +7,10 @@
     <title>Brendan Hanna</title>
     <!--materialize css cdn-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <!--my compiled scss-->
-    <link rel="stylesheet" href="styles/styles.css">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i|Roboto:400,700" rel="stylesheet">
+    <!--my compiled scss-->
+    <link rel="stylesheet" href="styles/styles.css">
     <!-- font awesome icons -->
     <script src="https://use.fontawesome.com/8606092cd1.js"></script>
     <!--jquery scripts-->
@@ -43,36 +43,76 @@
     </div>
     <!--case study (initially hidden off screen) -->
     <div class="case-studies">
-      <!-- back arrow -->
+      <!-- back -->
       <a href="index.html#work">
-        <i class="fa fa-chevron-left fa-2x back-chevron"></i>
+        <p class="back-chevron">back</i>
       </a>
       <!--case study-->
       <div class="case-study" id="case-study-1">
-        <div class="case-study-text">
-          <h2>Style 360</h2>
-          <p>this was a project that bloobity blah purple nurple</p>
-        </div>
-        <div class="case-study-content-wrapper">
-          <!--'content' (screenshots) -->
-          <div class="case-study-content">
-            <img src="images/style360-1.PNG" alt="screenshot of style360 project" class="screenshot">
-            <img src="images/style360-2.PNG" alt="screenshot of style360 project" class="screenshot">
-            <img src="images/style360-3.PNG" alt="screenshot of style360 project" class="screenshot">
-            <img src="images/style360-4.PNG" alt="screenshot of style360 project" class="screenshot">
-            <img src="images/style360-5.PNG" alt="screenshot of style360 project" class="screenshot">
+        <div class="case-study-left">
+          <div class="case-study-heading">
+            <a href="ebird.html">
+              <i class="fa fa-chevron-left fa-2x back-chevron"></i>
+            </a>
+            <h3>Style 360</h3>
+            <a href="pokemon.html">
+              <i class="fa fa-chevron-right fa-2x back-chevron"></i>
+            </a>
           </div>
-          <!--content-->
+          <div class="case-study-text">
+            <div class="case-study-bullets">
+              <div class="case-study-bullets-left">
+                <p><strong>Company:</strong> SightWorks</p>
+                <p><strong>Project:</strong> Responsive one-page web site for hair stylists</p>
+              </div>
+              <div class="case-study-bullets-right">
+                <p><strong>Role:</strong> Front-End Web Development</p>
+                <p><strong>Tech:</strong> React JS, SASS, create-react-app (NPM package)</p>
+              </div>
+            </div>
+            <!--/bullets-->
+            <div class="case-study-paragraph">
+              <p>SightWorks had an idea for a new product called Style360 and needed the UI prototyped in React.  They had not used React in production before and asked my co-intern and I to a) learn React, b) decide on a development environment and any front-end frameworks and c) build the UI.</p>
+              <p>I took the lead in learning React and brought useful information to the team which directly influenced the direction of the project.</p>
+            </div>
+          </div>
         </div>
-        <!--/contentwrapper-->
+        <div class="case-study-right">
+          <!--content wrapper-->
+          <div class="case-study-content-wrapper">
+            <div class="scroll-downs">
+              <div class="mousey">
+                <div class="scroller"></div>
+              </div>
+            </div>
+            <!--'content' (screenshots) -->
+            <div class="case-study-content">
+              <img src="images/style360-1.PNG" alt="screenshot of style360 project" class="screenshot">
+              <img src="images/style360-2.PNG" alt="screenshot of style360 project" class="screenshot">
+              <img src="images/style360-3.PNG" alt="screenshot of style360 project" class="screenshot">
+              <img src="images/style360-4.PNG" alt="screenshot of style360 project" class="screenshot">
+              <img src="images/style360-5.PNG" alt="screenshot of style360 project" class="screenshot">
+              <div class="to-top-desktop">
+                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+                <p>top</p>
+              </div>
+            </div>
+            <!--content-->
+          </div>
+          <!--content wrapper-->
+        </div>
+        <div class="to-top-tablet-and-down">
+          <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+          <p>top</p>
+        </div>
+        <!--case-study-right-->
       </div>
       <!--case study-->
     </div>
 
     <!-- footer-->
     <footer class="light-bg">
-      <div class="horizontal-line-dark"></div>
-      <a href="" target="_blank">Github</a>
+      <a href="https://github.com/gepetto503" target="_blank">Github</a>
     </footer>
     <!--materialize js cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
