--- a/index.html
+++ b/index.html
@@ -54,14 +54,17 @@
       <!--carousel-->
       <div class="carousel carousel-slider" data-indicators="true">
         <!-- slide 1 -->
-        <div class="carousel-item" href="#one!" id="style360">
-          <div class="overlay"></div>
-          <div class="slide-wrapper">
-            <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-            <a href="style-360.html" id="button-1" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
-            <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+          <div class="carousel-item" href="#one!" id="style360">
+            <a href="style-360.html" id="foo">
+              <div class="clear-overlay"></div>
+            </a>
+            <div class="overlay"></div>
+            <div class="slide-wrapper">
+                <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+                <button id="button-1" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
+                <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+            </div>
           </div>
-        </div>
 
         <div class="carousel-item" href="#two!" id="pokemon">
           <div class="overlay"></div>
@@ -122,8 +125,7 @@
 
     <!-- footer-->
     <footer class="light-bg">
-      <div class="horizontal-line-dark"></div>
-      <a href="" target="_blank">Github</a>
+      <a href="https://github.com/gepetto503" target="_blank">Github</a>
     </footer>
 
 
