everything except animations is done, needs to be ux tested on different devices

--- a/ebird.html
+++ b/ebird.html
@@ -7,10 +7,10 @@
     <title>Brendan Hanna</title>
     <!--materialize css cdn-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <!--my compiled scss-->
-    <link rel="stylesheet" href="styles/styles.css">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i|Roboto:400,700" rel="stylesheet">
+    <!--my compiled scss-->
+    <link rel="stylesheet" href="styles/styles.css">
     <!-- font awesome icons -->
     <script src="https://use.fontawesome.com/8606092cd1.js"></script>
     <!--jquery scripts-->
@@ -60,32 +60,58 @@
             </a>
           </div>
           <div class="case-study-text">
-            <p>this was a project that bloobity blah purple nurple</p>
+            <div class="case-study-bullets">
+              <div class="case-study-bullets-left">
+                <p><strong>Company:</strong> Proper Knocks Record Label</p>
+                <p><strong>Project:</strong> T-Shirt design for hip-hop group The Early Bird Project</p>
+              </div>
+              <div class="case-study-bullets-right">
+                <p><strong>Role:</strong> Graphic Design</p>
+                <p><strong>Tech:</strong>Adobe Illustrator</p>
+              </div>
+            </div>
+            <!--/bullets-->
+            <div class="case-study-paragraph">
+              <p>The Early Bird Project is actually my own hip-hop group.  We released our EP on our friend's record label, and I designed the T shirts.  Our friend printed them in the label's studio space.</p>
+
+            </div>
           </div>
         </div>
         <div class="case-study-right">
           <!--content wrapper-->
           <div class="case-study-content-wrapper">
+            <!--little scrolly mouse icon-->
+            <!-- <div class="scroll-downs">
+              <div class="mousey">
+                <div class="scroller"></div>
+              </div>
+            </div> -->
             <!--'content' (screenshots) -->
             <div class="case-study-content">
-
-              <div class="to-top">
+              <img src="images/ebird.jpg" alt="early bird tee shirt design" class="screenshot">
+              <!--back-to-top arrow-->
+              <!-- <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
-              </div>
+              </div> -->
             </div>
             <!--content-->
           </div>
           <!--content wrapper-->
         </div>
+        <!--back-to-top arrow-->
+        <!-- <div class="to-top-tablet-and-down">
+          <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+          <p>top</p>
+        </div> -->
+        <!--case-study-right-->
       </div>
       <!--case study-->
     </div>
 
     <!-- footer-->
     <footer class="light-bg">
-      <div class="horizontal-line-dark"></div>
-      <a href="" target="_blank">Github</a>
+      <a href="https://github.com/gepetto503" target="_blank">Github</a>
     </footer>
     <!--materialize js cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
