--- a/index.html
+++ b/index.html
@@ -49,47 +49,61 @@
         <p>Front-End Developer, UI & Graphic Designer</p>
     </header>
 
-    <!--holds carousel and case studies-->
     <section id="work">
       <!--carousel-->
       <div class="carousel carousel-slider" data-indicators="true">
         <!-- slide 1 -->
-          <div class="carousel-item" href="#one!" id="style360">
-            <a href="style-360.html" id="foo">
-              <div class="clear-overlay"></div>
-            </a>
-            <div class="overlay"></div>
-            <div class="slide-wrapper">
-                <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-                <button id="button-1" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
-                <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-            </div>
-          </div>
-
-        <div class="carousel-item" href="#two!" id="pokemon">
+        <div class="carousel-item" href="#one!" id="pokemon">
+          <a href="pokemon.html">
+            <div class="clear-overlay"></div>
+          </a>
           <div class="overlay"></div>
           <div class="slide-wrapper">
               <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <div onclick="window.location='pokemon.html';"  id="button-2" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</div>
+              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
               <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
           </div>
         </div>
+        <!--/slide 1-->
+        <!-- slide 2 -->
+        <div class="carousel-item" href="#two!" id="style360">
+          <a href="style-360.html">
+            <div class="clear-overlay"></div>
+          </a>
+          <div class="overlay"></div>
+          <div class="slide-wrapper">
+              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
+              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+          </div>
+        </div>
+        <!--/slide 2-->
+        <!-- slide 3 -->
         <div class="carousel-item" href="#three!" id="npo">
+          <a href="npo.html">
+            <div class="clear-overlay"></div>
+          </a>
           <div class="overlay"></div>
-          <div onClick="window.location='npo.html';" class="slide-wrapper">
-            <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-            <a href="npo.html" id="button-3" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
-            <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+          <div class="slide-wrapper">
+              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
+              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
           </div>
         </div>
+        <!--/slide 3-->
+        <!-- slide 4 -->
         <div class="carousel-item" href="#four!" id="ebird">
+          <a href="ebird.html">
+            <div class="clear-overlay"></div>
+          </a>
           <div class="overlay"></div>
-          <div onClick="window.location='ebird.html';" class="slide-wrapper">
-            <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-            <a href="ebird.html" id="button-4" class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</a>
-            <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+          <div class="slide-wrapper">
+              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
+              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
           </div>
         </div>
+        <!--/slide 4-->
       </div>
       <!--/carousel-->
     </section>
