--- a/npo.html
+++ b/npo.html
@@ -7,10 +7,10 @@
     <title>Brendan Hanna</title>
     <!--materialize css cdn-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <!--my compiled scss-->
-    <link rel="stylesheet" href="styles/styles.css">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i|Roboto:400,700" rel="stylesheet">
+    <!--my compiled scss-->
+    <link rel="stylesheet" href="styles/styles.css">
     <!-- font awesome icons -->
     <script src="https://use.fontawesome.com/8606092cd1.js"></script>
     <!--jquery scripts-->
@@ -54,22 +54,43 @@
             <a href="pokemon.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
-            <h3>NPO Donator</h3>
+            <h3>Non Profit Donator</h3>
             <a href="ebird.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
           <div class="case-study-text">
-            <p>this was a project that bloobity blah purple nurple</p>
+            <div class="case-study-bullets">
+              <div class="case-study-bullets-left">
+                <p><strong>Company:</strong> Epicodus Capstone Project</p>
+                <p><strong>Project:</strong> Invision prototype of an app for managing recurring donations.</p>
+              </div>
+              <div class="case-study-bullets-right">
+                <p><strong>Role:</strong>UX design</p>
+                <p><strong>Tech:</strong>Sketch 3, Invision</p>
+              </div>
+            </div>
+            <!--/bullets-->
+            <div class="case-study-paragraph">
+              <p>The vision for this app is to have a streamlined experience where the user can easily customize and automate donations to Non Profit Organizations, as well as curate which organizations they see content from.</p>
+              <p>The app will include an interactive map to search NPOs, the ability to invite NPOs to join the platform and thus be able to receive automated donations, and a dashboard where they can manage recurring or one-time donations.  Stretch goals include a social media micro-platform where users can interact with organizations and other users.</p>
+            </div>
           </div>
         </div>
         <div class="case-study-right">
           <!--content wrapper-->
           <div class="case-study-content-wrapper">
+            <div class="scroll-downs">
+              <div class="mousey">
+                <div class="scroller"></div>
+              </div>
+            </div>
             <!--'content' (screenshots) -->
             <div class="case-study-content">
-
-              <div class="to-top">
+              <img src="images/npo-1.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-2.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-3.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
               </div>
@@ -78,14 +99,18 @@
           </div>
           <!--content wrapper-->
         </div>
+        <div class="to-top-tablet-and-down">
+          <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+          <p>top</p>
+        </div>
+        <!--case-study-right-->
       </div>
       <!--case study-->
     </div>
 
     <!-- footer-->
     <footer class="light-bg">
-      <div class="horizontal-line-dark"></div>
-      <a href="" target="_blank">Github</a>
+      <a href="https://github.com/gepetto503" target="_blank">Github</a>
     </footer>
     <!--materialize js cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
