--- a/pokemon.html
+++ b/pokemon.html
@@ -7,10 +7,10 @@
     <title>Brendan Hanna</title>
     <!--materialize css cdn-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <!--my compiled scss-->
-    <link rel="stylesheet" href="styles/styles.css">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i|Roboto:400,700" rel="stylesheet">
+    <!--my compiled scss-->
+    <link rel="stylesheet" href="styles/styles.css">
     <!-- font awesome icons -->
     <script src="https://use.fontawesome.com/8606092cd1.js"></script>
     <!--jquery scripts-->
@@ -48,7 +48,7 @@
         <p class="back-chevron">back</i>
       </a>
       <!--case study-->
-      <div class="case-study" id="case-study-2">
+      <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading">
             <a href="style-360.html">
@@ -60,33 +60,57 @@
             </a>
           </div>
           <div class="case-study-text">
-            <p>Pokemon anal sex dungeon go!</p>
+            <div class="case-study-bullets">
+              <div class="case-study-bullets-left">
+                <p><strong>Company:</strong> Epicodus Group Project</p>
+                <p><strong>Project:</strong> Javascript-based web-browser video game inspired by the original Pokemon for Gameboy.</p>
+              </div>
+              <div class="case-study-bullets-right">
+                <p><strong>Role:</strong>Javascript Development</p>
+                <p><strong>Tech:</strong>Vanilla JavaScript</p>
+              </div>
+            </div>
+            <!--/bullets-->
+            <div class="case-study-paragraph">
+              <p>One month into code school, having just been introduced to the basics of JavaScript (and I mean the BASICS), I was tasked with pair-programming Javascript methods that controlled the behavior of Pokemon characters, duking it out in a browser-based homage to the original Pokemon Gameboy game.</p>
+              <p>View the live demo <a href="http://rawgit.com/dlopez6877/pokemon-game/master/index.html" target="_blank">here.</a>  After hitting the power button, it takes 30 seconds to load, just like the original, so be patient! </p>
+            </div>
           </div>
         </div>
         <div class="case-study-right">
+          <!--content wrapper-->
           <div class="case-study-content-wrapper">
+            <div class="scroll-downs">
+              <div class="mousey">
+                <div class="scroller"></div>
+              </div>
+            </div>
             <!--'content' (screenshots) -->
             <div class="case-study-content">
-              <img src="images/pokemon-1.PNG" alt="screenshot of pokemon project" class="screenshot">
-              <img src="images/pokemon-2.PNG" alt="screenshot of pokemon project" class="screenshot">
-              <img src="images/pokemon-3.PNG" alt="screenshot of pokemon project" class="screenshot">
-              <div class="to-top">
+              <img src="images/pokemon-1.PNG" alt="screenshot of style360 project" class="screenshot">
+              <img src="images/pokemon-2.PNG" alt="screenshot of style360 project" class="screenshot">
+              <img src="images/pokemon-3.PNG" alt="screenshot of style360 project" class="screenshot">
+              <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
               </div>
             </div>
             <!--content-->
           </div>
-          <!--/contentwrapper-->
+          <!--content wrapper-->
         </div>
+        <div class="to-top-tablet-and-down">
+          <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+          <p>top</p>
+        </div>
+        <!--case-study-right-->
       </div>
       <!--case study-->
     </div>
 
     <!-- footer-->
     <footer class="light-bg">
-      <div class="horizontal-line-dark"></div>
-      <a href="" target="_blank">Github</a>
+      <a href="https://github.com/gepetto503" target="_blank">Github</a>
     </footer>
     <!--materialize js cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
